- Save image to gallery

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Reddit Top Posts</string>
     <string name="check_internet">Check your internet</string>
+    <string name="img_saved">"The image was saved in the gallery "</string>
 </resources>
